# aube-nova

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
llm/: agent.py  breakthrough.py  chronicle.py  client.py  narration.py  stats.py
simulation/: colonist.py  events.py  genetics.py  resources.py  world.py
tests/: test_simulation.py
ui/: charts.py  chronicle_view.py  hud.py  map.py  portraits.py
