[project]
name = "aube-nova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.44.0",
    "gtts>=2.5.0",
    "httpx>=0.27.0",
    "matplotlib>=3.11.0",
    "python-dotenv>=1.0.0",
    "soundfile>=0.13.0",
    "voxcpm>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
